tests/ui/parallel-rustc/unexpected-type-issue-120601.stderr
   |
   |

   |
   |

   |
   |

error[E0425]: cannot find function, tuple struct or tuple variant `Unstable2` in this scope
   |
LL |     Unstable2(())
   |     ^^^^^^^^^ not found in this scope

error[E0308]: mismatched types
   |
LL |     match tuple() {
   |           ------- this expression has type `impl Future<Output = Tuple>`
LL |         Tuple(_) => {}
   |         ^^^^^^^^ expected future, found `Tuple`
   |
   = note: expected opaque type `impl Future<Output = Tuple>`
                   found struct `Tuple`
help: consider `await`ing on the `Future`
   |
LL |     match tuple().await {
   |                  ++++++


For more information about an error, try `rustc --explain E0308`.